--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -11,9 +11,7 @@
     "assert": {
       "preset": "lighthouse:no-pwa",
       "assertions": {
-        "offscreen-images": "off",
-        "uses-webp-images": "off",
-        "uses-http2": "off"
+        "offscreen-images": "off"
       }
     },
     "upload": {
