--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,4 @@
 version: 2.1
 
-commands:
-  restore_npm_cache:
-    description: "Restore npm cache"
-    steps:
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-  save_npm_cache:
-    description: "Save npm cache"
-    steps:
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-jobs:
-  lighthouse:
-    docker:
-      - image: circleci/node:12.3-browsers
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_npm_cache
-      - run: yarn install
-      - save_npm_cache
-      - run: yarn build
-      - run:
-          name: lhci autorun
-          command: yarn lhci || echo "LHCI failed!"
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - lighthouse
+orbs:
+  lighthouse-keeper: itinerisltd/lighthouse-keeper@0.1.4
