--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -9,7 +9,7 @@
       ]
     },
     "assert": {
-      "preset": "lighthouse:no-pwa",
+      "preset": "lighthouse:recommended",
       "assertions": {
         "offscreen-images": "off"
       }
